[unrated] Title: 배열 조각하기, Time: 4.73 ms, Memory: 85.6 MB -BaekjoonHub