@@ -1,26 +1,28 @@
-import java.util.ArrayList;
+import java.util.Deque;
+import java.util.LinkedList;
 
 class Solution {
     public int[] solution(int[] arr, int[] query) {
-        ArrayList<Integer> list = new ArrayList<>();
-        for (int i : arr) {
-            list.add(i);
+        Deque<Integer> deque = new LinkedList<>();
+        for (int i = 0; i < arr.length; i++) {
+            deque.add(arr[i]);
         }
 
         for (int i = 0; i < query.length; i++) {
-            if(i % 2 == 0) {
-                int size = list.size() - query[i] - 1;
-                for (int j = 0; j < size; j++) {
-                    list.remove(list.size() - 1);
+            int count = 0;
+
+            if (i % 2 == 0) {
+                count = deque.size() - query[i] - 1;
+                for (int j = 0; j < count; j++) {
+                    deque.removeLast();
                 }
             } else {
-                for (int j = 0; j < query[i]; j++) {
-                    list.remove(0);
+                count = query[i];
+                for (int j = 0; j < count; j++) {
+                    deque.removeFirst();
                 }
             }
         }
-
-        int[] answer = list.stream().mapToInt(i -> i).toArray();
-        return answer;
+        return deque.stream().mapToInt(Integer::intValue).toArray();
     }
 }
